b6: added LocationService mock to enable controller to produce a list of stubbed suggestions